fixed assets and bugs

--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -55,7 +55,7 @@
                         </div>
                         <div *ngIf="project.pdfPath!==''" class="row">
                             <button class="cv" (click)="downloadPdf(project.title)">
-                                 Download Repport
+                                 Download Report
                               <span class="icon"><i class="bi bi-download"></i></span>
                             </button>
                           </div>
@@ -74,9 +74,9 @@
                                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                                                 allowfullscreen></iframe>
                                         </div>
-                                        <div *ngIf="project.pathVid === 'https://www.youtube.com/embed/KnTs16PImcA?si=b4Ig_53-Ux-J-_4p'">
+                                        <div *ngIf="project.pathVid === 'https://drive.google.com/file/d/1S_6Dw238xLlE169W4A6J9AQHnH71fkmc/preview'">
                                             <iframe height="375px" width="100%" style="border-radius: 24px;"
-                                                src="https://www.youtube.com/embed/KnTs16PImcA?si=b4Ig_53-Ux-J-_4p" allowfullscreen></iframe>
+                                                src="https://drive.google.com/file/d/1S_6Dw238xLlE169W4A6J9AQHnH71fkmc/preview" allowfullscreen></iframe>
                                         </div>
                                         <div *ngIf="project.pathVid === 'https://www.youtube.com/embed/uJyh1AMuxHc?si=b3cQgKbAqcaqZHIM'">
                                             <iframe height="375px" width="100%" style="border-radius: 24px;"
