fixed cv and skills

--- a/src/app/components/skills-list/skills-list.component.html
+++ b/src/app/components/skills-list/skills-list.component.html
@@ -5,7 +5,7 @@
 <div class="scroller" data-direction="right" data-speed="fast">
   <div class="scroller__inner">
     <div class="skill"><img src="assets\skills\azure.webp" class="skill" /></div>
-    <div class="skill"><img src="assets\skills\computer vision.jpg" class="skill" /></div>
+    <div class="skill"><img src="assets\skills\computer vision.png" class="skill" /></div>
     <div class="skill"><img src="assets\skills\data analysis.jpg" class="skill" /></div>
     <div class="skill"><img src="assets\skills\deep learning.png" class="skill" /></div>
     <div class="skill"><img src="assets\skills\python.png" class="skill" /></div>
