--- a/src/app/components/what-i-offer/what-i-offer.component.html
+++ b/src/app/components/what-i-offer/what-i-offer.component.html
@@ -11,11 +11,11 @@
         </p>
         <ul>
 
-            <li>🧠 Artificial Intelligence: Data preparation, Data analysis, Predictive modeling, deep learning, computer vision.</li>
+            <li> Artificial Intelligence: Data preparation, Data analysis, Predictive modeling, deep learning, computer vision.</li>
             
-            <li>🔍 Programming: Python, back-end development with NestJS.</li>
-            <br>
-            <li>📚 Libraries and Tools: TensorFlow, Keras, PyTorch, Scikit-Learn, Pandas, NumPy, Matplotlib, Seaborn,openCV,Microsoft Azure, etc.</li>
+            <li> Programming: Python, back-end development with NestJS.</li>
+            <li> Libraries and Tools: TensorFlow, PyTorch, Keras, Scikit-learn, Pandas, NumPy, Matplotlib, Seaborn, OpenCV.</li>
+            <li> Platforms: Microsoft Azure, Git, PowerBI.</li>
         </ul>
 
     </div>
