fixed in projects link

--- a/src/app/components/portfolio/portfolio.component.html
+++ b/src/app/components/portfolio/portfolio.component.html
@@ -5,7 +5,7 @@
 </head>
 <div class="intro">
   <h1 class="logo-header">
-    <span class="logo">Oussama </span><span class="logo">Ziada</span>
+    <span class="logo">Oussama1 </span><span class="logo">Ziada</span>
     
   </h1>
   <div class="loadercontainer">
