updated new experience

--- a/src/app/components/skills-list/skills-list.component.html
+++ b/src/app/components/skills-list/skills-list.component.html
@@ -11,6 +11,7 @@
     <div class="skill"><img src="assets\skills\python.png" class="skill" /></div>
     <div class="skill"><img src="assets\skills\sql.png" class="skill" /></div>
     <div class="skill"><img src="assets\skills\yolo.png" class="skill" /></div>
+    <div class="skill"><img src="assets\skills\aws-2.svg" class="skill" /></div>
     <div class="skill"><img src="assets\skills\TF.png" class="skill" /></div>
     <div class="skill"><img src="assets\skills\pytorch.png" class="skill" /></div>
     <div class="skill"><img src="assets\skills\gpt.webp" class="skill" /></div>
